# xllm-service

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh.md  NOTICE_Third_Party.md  README.md  README_zh.md  RELEASE.md  prepare.sh  vcpkg.json
.github/workflows/: check_format.yml
cmake/: cc_binary.cmake  proto_library.cmake  static_analyzers.cmake
docs/en/: getting_started.md  overview.md
docs/zh/: getting_started.md  overview.md
xllm_service/: CMakeLists.txt  master.cpp  master.h  xllm_service.cpp  xllm_service.h
xllm_service/api_service/: CMakeLists.txt  api_service.cpp  api_service.h
xllm_service/chat_template/: CMakeLists.txt  chat_template.h  chat_template_factory.cpp  chat_template_factory.h  coded_chat_template.cpp  coded_chat_template.h  common_chat_template.cpp  common_chat_template.h  jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp
xllm_service/common/: CMakeLists.txt  call_data.h  closure_guard.h  concurrent_queue.h  global_gflags.cpp  global_gflags.h  hash_util.cpp  hash_util.h  json_reader.cpp  json_reader.h  macros.h  metrics.cpp  metrics.h  options.h  slice.h  threadpool.cpp  threadpool.h  time_predictor.cpp  time_predictor.h  timer.cpp  timer.h  ttft_predictor.cpp  ttft_predictor.h  types.h  utils.cpp  utils.h
xllm_service/common/xllm/: output.h  status.h  uuid.cpp  uuid.h
xllm_service/examples/: CMakeLists.txt  curl_http_client.sh  http_client_test.cpp  rpc_client_test.cpp  rpc_hello_client.cpp
xllm_service/http_service/: CMakeLists.txt  main.cpp  request_tracer.cpp  request_tracer.h  service.cpp  service.h
xllm_service/instances/: CMakeLists.txt  global_kvcache_mgr.cpp  global_kvcache_mgr.h  instance_client.cpp  instance_mgr.cpp  instance_mgr.h  instance_service.cpp  instance_service.h
xllm_service/proto/: CMakeLists.txt  xllm_http_service.proto  xllm_rpc_service.proto
xllm_service/proto/xllm/: chat.proto  common.proto  completion.proto
xllm_service/request/: CMakeLists.txt  request.h  request_tracer.cpp
xllm_service/request/chat_template/: jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp
xllm_service/request/tokenizer/: CMakeLists.txt  fast_tokenizer.h  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h  tiktoken_tokenizer.cpp  tiktoken_tokenizer.h  tokenizer.h  tokenizer_args.cpp  tokenizer_factory.cpp  tokenizer_factory.h
xllm_service/request/tokenizer/tokenizers/: tokenizers.h
xllm_service/rpc_service/: CMakeLists.txt  client.cpp  client.h  disagg_pd_policy.cpp  disagg_pd_policy.h  etcd_client.cpp  etcd_client.h  global_kvcache_mgr.cpp  global_kvcache_mgr.h  instance_mgr.cpp  instance_mgr.h  main.cpp  response_handler.cpp  response_handler.h  rpc_service_test.cpp  scheduler.cpp  scheduler.h  service.cpp  service.h
xllm_service/rpc_service/loadbalance_policy/: CMakeLists.txt  cache_aware_routing.cpp  cache_aware_routing.h  loadbalance_policy.cpp  loadbalance_policy.h  round_robin.cpp  round_robin.h
xllm_service/rpc_service/managers/: CMakeLists.txt  global_kvcache_mgr.cpp  global_kvcache_mgr.h  instance_mgr.cpp  instance_mgr.h
xllm_service/runtime/: CMakeLists.txt  executor.cpp  executor.h  response_handler.cpp
xllm_service/scheduler/: CMakeLists.txt  cache_aware_routing.cpp  cache_aware_routing.h  response_handler.cpp  response_handler.h  round_robin.h  scheduler.cpp  scheduler.h  scheduling_policy.h  slo_aware_policy.cpp  slo_aware_policy.h  xllm_chat_parse_bridge.cpp  xllm_chat_parse_bridge.h
xllm_service/scheduler/etcd_client/: CMakeLists.txt  etcd_client.cpp  etcd_client.h
xllm_service/scheduler/loadbalance_policy/: CMakeLists.txt  cache_aware_routing.cpp  cache_aware_routing.h  loadbalance_policy.cpp  loadbalance_policy.h  round_robin.cpp  round_robin.h  slo_aware_policy.cpp  slo_aware_policy.h
xllm_service/scheduler/managers/: CMakeLists.txt  global_kvcache_mgr.cpp  global_kvcache_mgr.h  instance_kvcache.cpp  instance_kvcache.h  instance_metrics.cpp  instance_metrics.h  instance_mgr.cpp  instance_mgr.h  instance_topology.cpp  instance_topology.h
xllm_service/tokenizer/: CMakeLists.txt  fast_tokenizer.cpp  hf_tokenizer.cpp  hf_tokenizer.h  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h  tiktoken_tokenizer.cpp  tiktoken_tokenizer.h  tokenizer.h  tokenizer_args.cpp  tokenizer_args.h  tokenizer_args_loader.cpp  tokenizer_args_loader.h  tokenizer_factory.cpp  tokenizer_factory.h
xllm_service/tokenizer/tokenizers/: Cargo.toml  tokenizers.h
xllm_service/tokenizer/tokenizers/src/: lib.rs
